Add first batch of confirmed vendors and special guests

--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -93,48 +93,9 @@
 </div>
 
 <div class="row content">
-  <p>Thank you for your patience as we begin our planning for Royal Vegas Retreat 2021. COVID-19 still presents uncertainty for us and our special guests, and we will add our special guests back to this page as the situation becomes clearer.</p>
-  <!--
-  <h2>Aito (Royal Princess Alice and Bio-Politics)</h2>
-  <div class="row">
-    <div class="col-md-4">
-  <img src="../images/guests/aito2.jpg" class="img-fluid" alt="Royal Princess Alice and Bio-Politics designer Aito"/>
-</div>
-<div class="col-md-8">
-  <p>【RoyalPrincessAlice】</p>
-  <p>Noble like European Princess</p>
-  <p>Mysterious, cute and dark like the world of Alice ...</p>
-  <p>It is a Gothic & Lolita brand with the concept of such a world view.</p>
-  <p>In addition, Lolita style "Wa Lori" incorporating Japanese taste has also been added.</p>
-  <p>【bio ・politics】</p>
-  <p>Adult Rock with the theme of free expression, regardless of gender or age</p>
-</div>
-<div class="col-md-12">
-  <p>Shop the brands online at <a href="https://royalprincessalice.net">https://royalprincessalice.net</a> and <a href="https://biopolitics.thebase.in">https://biopolitics.thebase.in</a></p>
-</div>
-</div>
-  <h2>Lief</h2>
-  <img src="../images/guests/lief06.jpg" class="img-fluid"/>
-  <p>We're so excited to welcome Lief to Royal Vegas Retreat 2021. This Korean brand offers substyle-crossing original print dresses in multiple sizes. In our opinion, they have a little something for everyone! You'll be able to buy from them in our vendors' room as well as see their looks on the runway in the fashion show.</p>
-  <p>In their own words:</p>
-  <p><i>Lief, which means both cute and lovely in Dutch, has a touch of Gothic and a pinch of sweetness, allowing them to create lovely, classical styles that can be worn in both casual and elegant situations.</i></p>
-  <p>You can find their products on their website (<a href="www.lief.co.kr">www.lief.co.kr</a>). You can also follow them on Facebook (<a href="https://www.facebook.com/lief.co.kr/">https://www.facebook.com/lief.co.kr/</a>), Twitter (<a href="https://twitter.com/LIEFOFFICIAL">https://twitter.com/LIEFOFFICIAL</a>), Instagram (<a href="https://instagram.com/lief_official/">https://instagram.com/lief_official/</a>), Tumblr (<a href="http://lief-lolita.tumblr.com/">http://lief-lolita.tumblr.com/</a>), or their Japanese official blog (<a href="http://ameblo.jp/lief-jp/">http://ameblo.jp/lief-jp/</a>).</p>
-  <hr>
-  <h2>Lovely Lor and Holly Flynn</h2>
-  <div class="row">
-    <div class="col-md-6">
-  <img src="../images/guests/holly_and_lor.jpg" class="img-fluid" alt="Holly Flynn and Lovely Lor together"/>
-</div>
-<div class="col-md-6">
-  <p>Lovely Lor is a lolita fashion YouTuber, and creator of Shit Lolitas Say, Lolita Reacts, Lolita Horror Stories and more! She’s an active member of multiple International Lolita Fashion Communities and has been interested in lolita and kawaii fashion for over 10 years. Lovely Lor has been featured in documentaries about lolita fashion such as Sugar Coated and Weird Threads. She creates videos on her youtube channel specializing in alternative fashions, positivity, and adventure!</p>
-</div>
-<div class="col-md-12">
-  <p>Holly is Lovely Lor’s partner who’s recently started wearing lolita! She appears regularly on Lovely Lor’s channel and assists with creating videos! Despite being a new lolita, she is fully committed to the fashion and is active with many online and local communities. Holly generally represents gothic lolita in this duo but also enjoys putting her own unique take on lolita.</p>
-  <p>Follow Lor and Holly's adventures on <a href="http://youtube.com/c/lovelylor">Youtube</a>, as well as <a href="http://instagram.com/lovelylor">Lor's Instagram</a>, <a href="https://www.facebook.com/lovelylorofficial/">Facebook</a>, and <a href="http://twitter.com/loveliestlor">Twitter</a>, as well as <a href="https://www.instagram.com/flynnski73/">Holly's Instagram</a> and <a href="https://twitter.com/_Flynnski">Twitter</a>.</p>
-</div>
-</div>
-  <hr>
-  <h2>Puvithel</h2>
+    <h1>RVR Special Guests</h1>
+  <p>We are so excited to have all of our wonderful special guests at our 2021 event! We will be gradually adding our special guests to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed special guests (so far!) for 2021:</p>
+    <h2>Puvithel</h2>
   <div class="row">
     <div class="col-md-6">
   <img src="../images/guests/puvithel.jpg" class="img-fluid" alt="Puvithel wearing her brand"/>
@@ -161,6 +122,39 @@
   <p>You can buy from Kuroshiro Kawaii on their webshop: <a href="https://kskawaii.com/">https://kskawaii.com/</a>. You can also follow them on <a href="https://www.facebook.com/kuroshirokawaii/">Facebook</a>, <a href="https://www.instagram.com/kskawaiishop/">Instagram</a>, and <a href="https://twitter.com/KSKawaiiShop">Twitter</a>.</p>
 </div>
 </div>
+  <!--
+  <h2>Aito (Royal Princess Alice and Bio-Politics)</h2>
+  <div class="row">
+    <div class="col-md-4">
+  <img src="../images/guests/aito2.jpg" class="img-fluid" alt="Royal Princess Alice and Bio-Politics designer Aito"/>
+</div>
+<div class="col-md-8">
+  <p>【RoyalPrincessAlice】</p>
+  <p>Noble like European Princess</p>
+  <p>Mysterious, cute and dark like the world of Alice ...</p>
+  <p>It is a Gothic & Lolita brand with the concept of such a world view.</p>
+  <p>In addition, Lolita style "Wa Lori" incorporating Japanese taste has also been added.</p>
+  <p>【bio ・politics】</p>
+  <p>Adult Rock with the theme of free expression, regardless of gender or age</p>
+</div>
+<div class="col-md-12">
+  <p>Shop the brands online at <a href="https://royalprincessalice.net">https://royalprincessalice.net</a> and <a href="https://biopolitics.thebase.in">https://biopolitics.thebase.in</a></p>
+</div>
+</div>
+  <h2>Lovely Lor and Holly Flynn</h2>
+  <div class="row">
+    <div class="col-md-6">
+  <img src="../images/guests/holly_and_lor.jpg" class="img-fluid" alt="Holly Flynn and Lovely Lor together"/>
+</div>
+<div class="col-md-6">
+  <p>Lovely Lor is a lolita fashion YouTuber, and creator of Shit Lolitas Say, Lolita Reacts, Lolita Horror Stories and more! She’s an active member of multiple International Lolita Fashion Communities and has been interested in lolita and kawaii fashion for over 10 years. Lovely Lor has been featured in documentaries about lolita fashion such as Sugar Coated and Weird Threads. She creates videos on her youtube channel specializing in alternative fashions, positivity, and adventure!</p>
+</div>
+<div class="col-md-12">
+  <p>Holly is Lovely Lor’s partner who’s recently started wearing lolita! She appears regularly on Lovely Lor’s channel and assists with creating videos! Despite being a new lolita, she is fully committed to the fashion and is active with many online and local communities. Holly generally represents gothic lolita in this duo but also enjoys putting her own unique take on lolita.</p>
+  <p>Follow Lor and Holly's adventures on <a href="http://youtube.com/c/lovelylor">Youtube</a>, as well as <a href="http://instagram.com/lovelylor">Lor's Instagram</a>, <a href="https://www.facebook.com/lovelylorofficial/">Facebook</a>, and <a href="http://twitter.com/loveliestlor">Twitter</a>, as well as <a href="https://www.instagram.com/flynnski73/">Holly's Instagram</a> and <a href="https://twitter.com/_Flynnski">Twitter</a>.</p>
+</div>
+</div>
+  <hr>
   <hr>
   <h2>Fluffy Kawaii Jo</h2>
     <div class="row">
