--- a/event/vendors.html
+++ b/event/vendors.html
@@ -93,16 +93,29 @@
 </div>
 
 <div class="row content">
-  <p>Thank you for your patience as we begin our planning for Royal Vegas Retreat 2021. COVID-19 still presents uncertainty for us and our vendors, and we will add our vendors back to this page as the situation becomes clearer.</p>
 
-  <!--<h1 class="sec01">
+  <h1 class="sec01">
   <h1>RVR Vendors</h1>
   <hr>
-  <p>We are so excited to have all of our wonderful vendors at our 2021 event! Learn more about them below:</p> 
-  <h2><a href="https://basuragang.storenvy.com/">Basura Gang</a></h2>
-  <p>Our motto is that pink is the new black! Kawaii anime inspired Pins, Patches, Accessories and clothing for cute babes! Come see all our cute and funny designs. Everything is designed with love and sass!</p>
+  <p>We are so excited to have all of our wonderful vendors at our 2021 event! We will be gradually adding our vendors to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed vendors (so far!) for 2021:</p> 
   <h2><a href="https://bbandb.net/">BB&B</a></h2>
   <p>BB and B is a boutique fake sweets jewelry house based in Los Angeles that has been creating limited run, handmade jewelry for the J-fashion (and alternative) community since 2011. Best known for our over the top macaron necklaces and other soft pastel creations, BB and B continue to explore new styles of jewelry for those who wish to combine their love for sweets and fashion.</p>
+  <h2><a href="https://kskawaii.com/">Kuroshiro Kawaii</a></h2>
+  <p>Hey, all! We at Kuroshiro Kawaii want to ensure that the entire community in the Houston, TX area has access to quality Japanese fashion. We pride ourselves on having real connections to brand owners and designers, including Japanese, indie, and self-care brands. Kuroshiro Kawaii—it’s a name with multiple facets. When we were deciding on a name, we wanted one that would reflect the duality of the fashions we offer while at the same time being recognizable and inviting to the typical American in the area. The “kuro” in our name stands for punk, gothic, and visual fashion; while “shiro” stands for elegant, princely, and sweet lolita and ouji fashions. It also reflects another duality that is important to the attitude of our shop: good and evil, angel and devil, order and chaos. The words “kuro” and “shiro,” and their associated meaning in kanji, really pin down what we wanted for the look and feel of our shop and the brands we want to carry. </p>
+  <h2><a href="https://www.etsy.com/shop/Lavendorium">Lavendorium</a></h2>
+  <p>Lavendorium is an accessories brand that aims to bring a little extra decadence to any outfit! Every piece is designed and handmade by brand owner Mia with care and attention to detail. Every single one is created to become a treasured part of someone's beloved wardrobe! The items you'll find here are sometimes spooky, sometimes sweet, but always sparkly! </p>
+  <h2><a href="https://oddmonster.co/">Odd Monster</a></h2>
+  <p>25% of the profits from the event will be donated to the Equal Justice Initiative</p>
+  <p>Odd Monster is inspired largely by 80's/90's pop culture, Japanese street fashion, as well as a dash of trashy horror and occult. Odd Monster is a slow fashion company: each piece is sewn, printed and/or embellished by hand by the designer herself, while material is sourced through local companies whenever possible. The goal is to create something a little bit cute, a little bit nerdy, and a little bit odd for all the other fashionable weirdos out there.</p>
+  <h2><a href="https://www.puvithel.com/">Puvithel</a></h2>
+  <p>Puvithel is a alternative fashion designer based in Pittsburgh, USA who has been making and designing original handmade jewelry, accessories, clothing and handbags for J-fashion and alternative styles since 2015. Puvithel is about unabashed, self-expression and spans many styles, including punk, gothic, lolita, and menhera. Regardless of style, Puvithel's items are loud - inspired by the in-your-face aesthetic of American gothic fashion. Puvithel believes fashion is a beneficial form of expression, a belief that is imbued in every item she makes. Every series has its own style and narrative to aid you in telling your own story.</p>
+  <h2><a href="https://www.sugarstarcafe.com">Sugarstar Cafe</a></h2>
+  <p>Sugarstar Cafe is inspired by toys and everything sweet! It's filled with delicious treats and other colorful accessories to match any coordinate or casual wear~  \ʕ•ᴥ•ʔ/</p>
+  <h2><a href="https://twootietarte.com">Twootie Tarte (Remote)</a></h2>
+  <p>Saving the world by defeating the con funk one bath at a time. Come stop by for some amazing smells and products that redefine self care. Based out of Austin, Texas! We're encouraging fans to keep their hands clean, smell good and practice good hygiene.</p>
+  <!--
+  <h2><a href="https://basuragang.storenvy.com/">Basura Gang</a></h2>
+  <p>Our motto is that pink is the new black! Kawaii anime inspired Pins, Patches, Accessories and clothing for cute babes! Come see all our cute and funny designs. Everything is designed with love and sass!</p>
   <h2><a href="https://biopolitics.thebase.in">Bio・Politics</a></h2>
   <p>性別や年齢に捕われない、自由な表現をテーマにした大人Rock</p>
   <p>Adult Rock with the theme of free expression, regardless of gender or age</p>
@@ -110,8 +123,8 @@
   <p>Enchanted Dream Couture is an American indie brand based in Texas. Since 2016 we design and make handmade lolita accessories, now our company has grown to making handbags, socks,  dresses and shoes. Our main goal is to create well made dresses that fits comfortably to different body size. We strive to create unique elegant quality items that are well thought of to the smallest details.</p>
   <h2><a href="https://fluffytori.com/">Fluffy Tori</a></h2>
   <p>Fluffy Tori is all about Kawaii and Lolita fashion. Brand owner Joëlle (aka Fluffy Kawaii Jo) from Switzerland and designer Mezzo from Germany work together to create fashion, accessories and stationary that will make you feel happy and kawaii as fluff. We create everything from our super popular enamel pins, stickers and jewellery up to dresses, sweaters and shoes in every size – usually featuring pastel colors, cute and magical little creatures and bright and cheerful themes that will put a smile on the face of anyone wearing them. Occasionally, we also dip into more sophisticated Classic and Gothic Lolita themes or create some pop culture inspired items, because we firmly believe that anyone can be a magical fairy princess and a total nerd at the same time.</p>
-  <h2><a href="https://www.instagram.com/garden.of.shortcakes/">Garden of Shortcakes</a></h2>
-  <p>As a Georgia based jeweler, Cierra has been making jewelry for 13 years. Having recently discovered the art of clay modeling, she began incorporating the art into her jewelry via sweet & floral pendants and charms. With the start of her business “Garden of Shortcakes”, she is becoming known for her whimsically sweet, alternative jewelry. Garden of Shortcakes continues to grow with new collections designed to encourage your love for sweets, jewelry and the whimsy of the world!</p>
+  <h2>Frill Style</h2>
+  <p>Coming soon!</p>
   <h2><a href="https://www.ghostgirlgoods.com/">Ghost Girl Goods</a></h2>
   <p>GHOST GiRL GOODS is a clothing brand, fusing cool hip-hop looks and cute pop style into one. Our goals are to remove labels and embrace differences, encouraging confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration for each piece. She has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. GHOST GiRL looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
   <h2><a href="https://www.etsy.com/shop/HoliLoliEGL">Holi Loli</a></h2>
@@ -124,21 +137,12 @@
   <p>We feature local artists, designers, makers, and creators who specialize in alternative styles. Our walls are filled with art, patches, pins, jewelry, home goods, and more unique items that you have to see to get... We also have an ever-changing secondhand section filled with goodies from the local alt community! </p>
   <h2><a href="http://instagram.com/kirakirakawaiishoppe">Kira Kira Kawaii</a></h2>
   <p>Kira Kira Kawaii Shoppe is a cute and glittery shop for true lovers of lolita fashion. Each item is handmade and one of a kind, crafted to make you shine as bright as a diamond.</p>
-  <h2><a href="https://kskawaii.com/">Kuroshiro Kawaii</a></h2>
-  <p>Hey, all! We at Kuroshiro Kawaii want to ensure that the entire community in the Houston, TX area has access to quality Japanese fashion. We pride ourselves on having real connections to brand owners and designers, including Japanese, indie, and self-care brands. Kuroshiro Kawaii—it’s a name with multiple facets. When we were deciding on a name, we wanted one that would reflect the duality of the fashions we offer while at the same time being recognizable and inviting to the typical American in the area. The “kuro” in our name stands for punk, gothic, and visual fashion; while “shiro” stands for elegant, princely, and sweet lolita and ouji fashions. It also reflects another duality that is important to the attitude of our shop: good and evil, angel and devil, order and chaos. The words “kuro” and “shiro,” and their associated meaning in kanji, really pin down what we wanted for the look and feel of our shop and the brands we want to carry. </p>
-  <h2><a href="https://www.etsy.com/shop/Lavendorium">Lavendorium</a></h2>
-  <p>Lavendorium is an accessories brand that aims to bring a little extra decadence to any outfit! Every piece is designed and handmade by brand owner Mia with care and attention to detail. Every single one is created to become a treasured part of someone's beloved wardrobe! The items you'll find here are sometimes spooky, sometimes sweet, but always sparkly! </p>
   <h2><a href="lief.co.kr">Lief</a></h2>
   <p>Lief, which means both cute and lovely in Dutch, has a touch of Gothic and a pinch of sweetness, allowing us to create lovely, classical styles that can be worn in both casual and elegant situations.</p>
-  <h2><a href="https://oddmonster.co/">Odd Monster</a></h2>
-  <p>25% of the profits from the event will be donated to the Equal Justice Initiative</p>
-  <p>Odd Monster is inspired largely by 80's/90's pop culture, Japanese street fashion, as well as a dash of trashy horror and occult. Odd Monster is a slow fashion company: each piece is sewn, printed and/or embellished by hand by the designer herself, while material is sourced through local companies whenever possible. The goal is to create something a little bit cute, a little bit nerdy, and a little bit odd for all the other fashionable weirdos out there.</p>
   <h2><a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop</a></h2>
   <p>The idea behind Paradise Rose is to provide those who love Japanese fashion with handmade, affordable jewelry and accessories that compliment your wardrobe and complete the outfit. Jewelry can be an excellent way to make a coordinate unique and your own. Pieces created here are done by hand, resulting in one-of-a-kind pieces that belong to you alone.</p>
   <h2><a href="https://prettysour.com/">Pretty Sour</a></h2>
   <p>Pretty Sour is a size inclusive ethical US based indie clothing brand heavily inspired by J-fashion. We sell handmade clothing and accessories ranging from size XS - 5X in primarily pastel and vibrant colors with kitchsy cute illustrations and nostalgic prints.</p>
-  <h2><a href="https://www.puvithel.com/">Puvithel</a></h2>
-  <p>Puvithel is a alternative fashion designer based in Pittsburgh, USA who has been making and designing original handmade jewelry, accessories, clothing and handbags for J-fashion and alternative styles since 2015. Puvithel is about unabashed, self-expression and spans many styles, including punk, gothic, lolita, and menhera. Regardless of style, Puvithel's items are loud - inspired by the in-your-face aesthetic of American gothic fashion. Puvithel believes fashion is a beneficial form of expression, a belief that is imbued in every item she makes. Every series has its own style and narrative to aid you in telling your own story.</p>
   <h2><a href="https://royalprincessalice.net">Royal Princess Alice</a></h2>
   <p>Noble like European Princess, mysterious, cute and dark like the world of Alice ...</p>
   <p>It is a Gothic & Lolita brand with the concept of such a world view. In addition, Lolita style "Wa Lori" incorporating Japanese taste has also been added.</p>
@@ -148,14 +152,8 @@
   <p>更に、和テイストを取り入れたロリータスタイル『和ロリ』も加わりました。</p>
   <h2><a href="https://www.etsy.com/shop/starsweets/">Star Sweets</a></h2>
   <p>Star Sweets is a handmade j-fashion accessories and artist shop!</p>
-  <h2>Sugar and Vice</h2>
-  <p>Coming soon!</p>
   <h2><a href="https://www.sugarmintcastle.com/">Sugar Clay Cafe</a></h2>
   <p>Sugar Clay Cafe is the home of the Magical gift! You’ll find handmade items that sparkle and shine or cute sweet themes for that perfect accent to your accord, bringing that finishing touch. Since 2004, creating gifts and wearables that bring joy has been our specialty- that’s why we decorate so pink! Please be welcomed as you’re the guest of honor at our tea party! <3</p>
-  <h2><a href="https://www.sugarstarcafe.com">Sugarstar Cafe</a></h2>
-  <p>Sugarstar Cafe is inspired by toys and everything sweet! It's filled with delicious treats and other colorful accessories to match any coordinate or casual wear~  \ʕ•ᴥ•ʔ/</p>
-  <h2><a href="https://www.etsy.com/people/SweetPastelPeach">Sweet Pastel Peach</a></h2>
-  <p>Coming soon!</p>
   <h2><a href="https://theblackribbon.com/">The Black Ribbon</a></h2>
   <p>The Black Ribbon originally started in Atlanta, GA under the name Miscy as an esty shop all hand made by our designer, Halley. Around 2011 we changed our name and decided to move towards making more pieces in a factory setting. Our brand is currently produced in the San Francisco Bay Area, utilizing local factories as well as smaller productions made entirely in our own studio. We produce small batch runs of clothing inspired by some of our favorite eras in fashion . The Black Ribbon strives for quality and sticks to our values of no sweatshop labor, good quality textiles, and having our line as accessible as possible to all people. We strongly support diversity, a livable minimum wage, and making clothes as sustainable as we can. We hope you like knowing your clothes were made by people who care from start to finish.</p>
   <h2><a href="https://www.thedecorafactory.com">The Decora Factory (remote)</a></h2>
@@ -163,8 +161,7 @@
   <h2><a href="http://tulutulu.xyz/">Tulu Tulu (remote)</a></h2>
   <p>TuluTulu Lolita is an indie lolita shop based in Taiwan.</p>
   <p>Have you ever met a fairy who can help you spread the gold dust of your dreams? The fairy godmother who helped Cinderella to become a beautiful princess, has constantly taught the little fairy that they must show the all the girls across the world the magic of owning their beauty. The little fairy opened a shop - "Tulu Tulu Lolita", she wanted to send a beautiful blessing to every female in the world who has the heart of a lady!</p>
-  <h2><a href="https://twootietarte.com">Twootie Tarte</a></h2>
-  <p>Saving the world by defeating the con funk one bath at a time. Come stop by for some amazing smells and products that redefine self care. Based out of Austin, Texas! We're encouraging fans to keep their hands clean, smell good and practice good hygiene.</p>-->
+-->
   <hr>
 
 </div>
