Updates for vendors and special guests pages

--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -153,20 +153,21 @@
   <p>Holly is Lovely Lor’s partner who’s recently started wearing lolita! She appears regularly on Lovely Lor’s channel and assists with creating videos! Despite being a new lolita, she is fully committed to the fashion and is active with many online and local communities. Holly generally represents gothic lolita in this duo but also enjoys putting her own unique take on lolita.</p>
   <p>Follow Lor and Holly's adventures on <a href="http://youtube.com/c/lovelylor">Youtube</a>, as well as <a href="http://instagram.com/lovelylor">Lor's Instagram</a>, <a href="https://www.facebook.com/lovelylorofficial/">Facebook</a>, and <a href="http://twitter.com/loveliestlor">Twitter</a>, as well as <a href="https://www.instagram.com/flynnski73/">Holly's Instagram</a> and <a href="https://twitter.com/_Flynnski">Twitter</a>.</p>
 </div>
-</div>
-  <hr>
+</div>-->
   <hr>
   <h2>Fluffy Kawaii Jo</h2>
     <div class="row">
         <div class="col-md-4">
-  <img src="../images/guests/FluffyKawaiiJo3.jpg" class="img-fluid" alt="Fluffy Kawaii Jo in a pile of giant sprinkles"/>
+  <img src="../images/guests/FluffyKawaiiJo4.jpg" class="img-fluid" alt="Fluffy Kawaii Jo in a pile of giant sprinkles"/>
 </div>
   <div class="col-md-8">
-  <p>“Everybody Can Be Kawaii” – no matter what age, gender, color or body type you are, you deserve to feel kawaii as fluff and good about yourself. Fluffy Kawaii Jo lives in Switzerland and her mission is to help you feel fantastic wearing the stuff that makes you happy. She makes videos about lolita fashion and Kawaii culture in general, from practical lifehacks for people new to the fashion, product reviews, event reports and interviews with people from the scene. She also makes entertaining and funny videos like her "Action Lolita" series, proving that not only can everybody be kawaii, but you can be kawaii anywhere, doing anything as well.</p>
-  <p>You can find her on <a href="http://www.youtube.com/fluffykawaiijo">Youtube</a>, <a href="http://fireworktv.onelink.me/iKBL/fluffykawaiiJo">Firework</a>, <a href="http://www.instagram.com/fluffykawaiijo">Instagram</a>, <a href="http://www.facebook.com/fluffykawaiijo">Facebook</a>, and <a href="http://www.patreon.com/fluffykawaiijo">Patreon</a>.</p>
+  <p>Everybody Can Be Kawaii – No matter what age, gender, color or body type you are, you deserve to feel kawaii as fluff and good about yourself.</p>
+
+<p>Fluffy Kawaii Jo lives in Switzerland and her mission is to help you feel fantastic wearing the stuff that makes you happy. She makes videos about lolita fashion and Kawaii culture in general, from practical lifehacks for people new to the fashion, product reviews, event reports and interviews with people from the scene as well as entertaining and funny videos like her Lolitas vs Normies and Action Lolita series – proving that not just everybody can be kawaii, but you can be kawaii anywhere, doing anything as well.</p>
+  <p>You can find her at <a href="https://www.fluffykawaiijo.com">fluffykawaiijo.com</a>, on <a href="http://www.youtube.com/fluffykawaiijo">Youtube</a>, <a href="http://www.instagram.com/fluffykawaiijo">Instagram</a>, <a href="http://www.facebook.com/fluffykawaiijo">Facebook</a>, and <a href="http://www.patreon.com/fluffykawaiijo">Patreon</a>.</p>
 </div>
 </div>
-<p/>
+<!--
   <hr>
   <h2>GHOST GiRL GOODS</h2>
     <div class="row">
