Add Flores Astorum and TuluTulu to vendor page

--- a/event/vendors.html
+++ b/event/vendors.html
@@ -100,6 +100,11 @@
   <p>We are so excited to have all of our wonderful vendors at our 2021 event! We will be gradually adding our vendors to this page as their situation with respect to COVID-19 becomes clearer. Thank you for your patience! <a href="https://buttondown.email/prettyprincessclub">Subscribe to our email list for updates</a> and scroll to learn more about our confirmed vendors (so far!) for 2021:</p> 
   <h2><a href="https://bbandb.net/">BB&B</a></h2>
   <p>BB and B is a boutique fake sweets jewelry house based in Los Angeles that has been creating limited run, handmade jewelry for the J-fashion (and alternative) community since 2011. Best known for our over the top macaron necklaces and other soft pastel creations, BB and B continue to explore new styles of jewelry for those who wish to combine their love for sweets and fashion.</p>
+  <h2><a href="https://floresastorum.storenvy.com/">Flores Astorum</a></h2>
+  <p>Meaning "Flowers of the Stars", Flores Astorum aims to bridge the distance between Japanese indie brands and the rest of the world. Each designer is like a shining star, and their works are like flowers that make the world more beautiful piece by piece! °˖✧</p>
+<p>We are a sister shop to Hoshi no Hanazono, a shop that specializes in stocking items from indie designers all over the world and connecting them to fashion lovers in Japan.</p>
+<p>Part of Sunflower Seed Company.</p>
+</p>
   <h2><a href="https://fluffytori.com/">Fluffy Tori</a></h2>
   <p>Fluffy Tori is all about Kawaii and Lolita fashion. Brand owner Joëlle (aka Fluffy Kawaii Jo) from Switzerland and designer Mezzo from Germany work together to create fashion, accessories and stationery that will make you feel happy and kawaii as fluff.</p>
 <p>We create everything from our super popular enamel pins, stickers and jewellery up to dresses, sweaters and shoes in every size – usually featuring pastel colors, cute and magical little creatures and bright and cheerful themes that will put a smile on the face of anyone wearing them. 
@@ -122,6 +127,9 @@ Occasionally, we also dip into more sophisticated Classic and Gothic Lolita them
   <p>The Black Ribbon originally started in Atlanta, GA under the name Miscy as an esty shop all hand made by our designer, Halley. Around 2011 we changed our name and decided to move towards making more pieces in a factory setting. Our brand is currently produced in the San Francisco Bay Area, utilizing local factories as well as smaller productions made entirely in our own studio. We produce small batch runs of clothing inspired by some of our favorite eras in fashion . The Black Ribbon strives for quality and sticks to our values of no sweatshop labor, good quality textiles, and having our line as accessible as possible to all people. We strongly support diversity, a livable minimum wage, and making clothes as sustainable as we can. We hope you like knowing your clothes were made by people who care from start to finish.</p>
   <h2><a href="https://twootietarte.com">Twootie Tarte (Remote)</a></h2>
   <p>Saving the world by defeating the con funk one bath at a time. Come stop by for some amazing smells and products that redefine self care. Based out of Austin, Texas! We're encouraging fans to keep their hands clean, smell good and practice good hygiene.</p>
+  <h2><a href="http://tulutulu.xyz/">Tulu Tulu (remote)</a></h2>
+  <p>TuluTulu Lolita is an indie lolita shop based in Taiwan.</p>
+  <p>Have you ever met a fairy who can help you spread the gold dust of your dreams? The fairy godmother who helped Cinderella to become a beautiful princess, has constantly taught the little fairy that they must show the all the girls across the world the magic of owning their beauty. The little fairy opened a shop - "Tulu Tulu Lolita", she wanted to send a beautiful blessing to every female in the world who has the heart of a lady!</p>
   <!--
   <h2><a href="https://basuragang.storenvy.com/">Basura Gang</a></h2>
   <p>Our motto is that pink is the new black! Kawaii anime inspired Pins, Patches, Accessories and clothing for cute babes! Come see all our cute and funny designs. Everything is designed with love and sass!</p>
