Update registration page and event FAQ to reflect reservations sold out

--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -126,11 +126,10 @@
   <h4>Where do I buy my ticket?</h4>
   <p>Please see our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a> to purchase your ticket once sales open on June 26, 2021.</p>
   <h4>How will ticket sales work in 2021?</h4>
-  <p>Ticket reservations will open on <b>June 26th at 12:00 PM PT</b>. At this time, you will be able to <b>reserve your GA or VIP ticket</b> on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>. (Our Eventbrite page still shows us as postponed right now - don't worry! We will be making updates behind the scenes to prepare for ticket sales.)</p>
-  <p><b>GA tickets</b> will cost <b>$5</b> to reserve. <b>VIP tickets</b> will cost <b>$20</b> to reserve. Only GA and VIP tickets will be available during the reservation period.</p>
-  <p>The reservation period ends <b>July 31st or when we sell out of tickets</b>.</p>
+  <p>Ticket reservations opened on <b>June 26th at 12:00 PM PT</b>. We sold out of ticket reservations the same day they began. Thank you all for your support!</p>
+  <p><b>GA tickets</b> cost <b>$5</b> to reserve. <b>VIP tickets</b> cost <b>$20</b> to reserve. Only GA and VIP tickets were available during the reservation period.</p>
   <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>.</p> 
-  <p>In addition, if any tickets remain after the reservation period, or if we are able to increase our attendance cap, we will offer <b>GA, VIP, and Limited-Access Partner Pass tickets</b> at full price. Prices are as follows:
+  <p>In addition, if any tickets remain after the reservation period, or if we are able to increase our attendance cap, we will offer <b>GA, VIP, and Limited-Access Partner Pass tickets</b> at full price. It is not clear if we will be able to increase our attendance cap to offer more GA tickets. We are completely sold out of VIP tickets and will not be able to add any more. We have a number of partner passes available. Prices will be as follows:
     <ul>
       <li><b>GA</b>: $125</li>
       <li><b>VIP</b>: $200</li>
@@ -144,6 +143,12 @@
   <p>Yes! All tickets purchased in 2020 have automatically been rolled over to 2021. However, you will need to rebook your room onsite using our <a href="https://book.passkey.com/go/sroy1121mg">Passkey portal</a>.</p>
   <h4>What are the perks associated with VIP tickets?</h4>
   <p>VIP ticketholders get a premium goody bag with gifts from our sponsors, access to exclusive before- and after-parties, and priority seating for afternoon tea and all content. We will provide specific details in the coming months as we get closer to our event. The remaining VIP tickets are in very short supply, so set an alarm if you want one!</p>
+  <h4>Ticket reservations sold out before I could reserve my ticket. Will there be more?</h4>
+  <p>We are in the process of deciding whether or not to increase our total attendance cap to offer more GA tickets. We are waiting on more data about the COVID-19 delta variant, and we need to understand whether we have the space for everyone to move about safely and comfortably if we increase the total attendance. We will make a decision and an announcement in early August before we ask people who reserved a ticket to pay the remaining cost.</p>
+  <h4>Will there be more VIP tickets?</h4>
+  <p>Unfortunately, we cannot sell any more VIP tickets at this time.</p>
+  <h4>When will Partner Passes go on sale?</h4>
+  <p>Partner Passes will go on sale starting August 14 at 12 PM PT, at the same time when those who reserved tickets will be asked to pay the remaining cost.</p>
   <h4>I have a discount code for a ticket. When can I use it?</h4>
   <p>You can use a discount code to buy your ticket anytime while full-price ticket sales are open. You cannot use your discount code on ticket reservations.</p>
   <h4>Will you sell single-day tickets?</h4>
