--- a/event/reg.html
+++ b/event/reg.html
@@ -97,11 +97,10 @@
   <h1 class="sec01">
   <h1>RVR Registration</h1>
   <hr>
-  <p>Ticket reservations will open on <b>June 26th at 12:00 PM PT</b>. At this time, you will be able to <b>reserve your GA or VIP ticket</b> on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>. (Our Eventbrite page still shows us as postponed right now - don't worry! We will be making updates behind the scenes to prepare for ticket sales.)</p>
-  <p><b>GA tickets</b> will cost <b>$5</b> to reserve. <b>VIP tickets</b> will cost <b>$20</b> to reserve. Only GA and VIP tickets will be available during the reservation period.</p>
-  <p>The reservation period ends <b>July 31st or when we sell out of tickets</b>.</p>
+  <p>We sell tickets and ticket reservations on <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2021-tickets-52897344381">our Eventbrite page</a>.</p>
+  <p>We have sold out of ticket reservations for 2021! Thank you all for your support.</p>
   <p>On <b>August 14th</b> we will ask everyone who reserved a ticket during the reservation period to pay the remainder of their ticket price. At this time, you will pay the remaining <b>$120</b> for <b>GA tickets</b> and <b>$180</b> for <b>VIP tickets</b>.</p> 
-  <p>In addition, if any tickets remain after the reservation period, or if we are able to increase our attendance cap, we will offer <b>GA, VIP, and Limited-Access Partner Pass tickets</b> at full price. Prices are as follows:
+  <p>In addition, if any tickets remain after the reservation period, or if we are able to increase our attendance cap, we will offer <b>GA, VIP, and Limited-Access Partner Pass tickets</b> at full price. It is not clear if we will be able to increase our attendance cap for GA tickets. We are completely sold out of VIP tickets and will not be able to add any more. We have a number of partner passes available. Prices will be as follows:
     <ul>
       <li><b>GA</b>: $125</li>
       <li><b>VIP</b>: $200</li>
